# test_innercamp

./: .cursorignore  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  run_agent.sh  run_haiku.sh  run_rag.sh  utils.py
docs/s02_simple_haiku/: spec.md
docs/s02_simple_haiku/haiku/: spec.md
docs/s02_simple_haiku/rag/: spec.md
docs/sums/: AGENT_REFACTORING_SUMMARY.md
meta/gigachat/: result_chatcomp.json  result_chatcomp_func.json  result_embeddings.json  result_models.json
meta/openai/: post_chatcomp_func.json  result_chatcomp_func.json
src/: __init__.py  agent.py  config.py  logger.py  prepare_data.py  utils.py  utils_openai.py
src/api/: __init__.py  _common.py  get_avg_overall_score.py  get_avg_score.py  get_students.py  get_top_students.py  search_rag.py  vector_search.py
src/data/: ml.md  ml_intro.md  ml_practics.md  opt_cont.md  prob.md  prob_stats.md  rand_proc.md  students.csv
src/data/courses/: ml.md  ml_bayes.md  ml_extra.md  ml_intro.md  opt.md  opt_cont.md  opt_ml.md  phil.md  prob.md  prob_stats.md  rand_proc.md
src/s01_api_discover/: e01_profanity.py
src/s02_simple_haiku/: agent.py  clarify.py  classify_intent.py  execute_gen_haiku.py  execute_rag_search.py  select_tool_call.py  split_word.py  tool_count_service.py  validate_tool_call.py
src/s02_simple_haiku/data/: ainu.md  japanese_poetry.md  kaifuso.md  kanshi.md  kojiki.md  kokin_wakashu.md  manyoshu.md  old_japanese.md  ryukyuans.md
src/s02_simple_haiku/haiku/: __init__.py  count_stats.py  haiku_service.py  haiku_utils.py  tool_count_service.py  tool_haiku.py
src/s02_simple_haiku/rag/: __init__.py  build_index.py  faiss.index  logger.py  rag_service.py  rag_utils.py  tool_rag.py
src_agent/: agent.py  config.py  logger.py  utils.py
src_example/: __init__.py  agent.py  answer_with_rag.py  classify_intent.py  classify_intent_vector_search.py  classify_vector_search_intent.py  config.py  data_store.py  extract_lector_name.py  extract_lecturer.py  extract_location.py  extract_schedule.py  logger.py  router.py  utils.py  utils_gigachat.py  utils_openai.py
src_example/tools/: database_tool.py  rag_tool.py  student_meta_tool.py
src_haiku/: __init__.py  config.py  utils.py  utils_openai.py
src_haiku/s02_simple_haiku/: execute_rag_search.py  select_tool_call.py
src_haiku/s02_simple_haiku/data/: japanese_poetry.md  kanshi.md  old_japanese.md  waka.md
src_haiku/s02_simple_haiku/haiku/: logger.py
src_haiku/s02_simple_haiku/rag/: build_index.py  faiss.hash  logger.py  rag_service.py
src_haiku/s02_simple_haiku/rag/data/: haiku_intro.md
src_learn/: agent.py  classify_intent.py  data_store.py  router.py
src_learn/tools/: __init__.py  database_tool.py
tasks/: agent.md  agent_example.md  queries.md  sigma_gigachat.md  sigma_sandbox.md  sigma_sberosc.md  testing.md
test/: conftest.py  test_prepare_data.py  test_prepare_data_db.py  test_prepare_data_index.py  test_utils.py  test_utils_openai.py
test/01_simple_haiku/: __init__.py  test_agent_integration.py
test/agent/: test_agent_get_avg_overall_score.py  test_agent_get_avg_score.py  test_agent_get_top_students.py  test_agent_irrelevant.py  test_agent_multihop.py  test_agent_search_rag.py  test_agent_vector_search.py  test_agent_vector_search_1.py  test_agent_vector_search_1_lecturer.py  test_agent_vector_search_2.py  test_agent_vector_search_2_schedule.py  test_agent_vector_search_3_location.py  test_agent_vector_search_4.py  test_agent_vector_search_4_literature.py  test_agent_vector_search_5_multihop.py
test/api/: test_get_avg_overall_score.py  test_get_avg_score.py  test_get_students.py  test_get_top_students.py  test_search_rag.py  test_vector_search.py
test/llm/: test_utils.py
test/s01_api_discover/: test_e01_profanity.py
test/s02_simple_haiku/: test_agent_cli_old.py  test_agent_integration.py  test_build_index.py  test_clarification.py  test_classify_intent.py  test_select_tool_call.py  test_validate_tool_call.py
test/s02_simple_haiku/haiku/: test_count_stats.py  test_haiku_service.py  test_haiku_utils.py  test_split_word.py
test/s02_simple_haiku/rag/: test_build_index.py  test_rag_service.py  test_rag_utils.py
test_agent/: conftest.py  test_agent_integration.py  test_agent_step2.py  test_agent_step3.py  test_agent_step4.py  test_utils.py
test_agent_old/: test_agent_full_happy.py  test_agent_integration.py  test_agent_step1.py  test_agent_step2.py
test_example/: help_e2e_prep_db_hard.py  help_e2e_prep_db_top.py  prep_get_avg_overall_score.py  prep_get_avg_score.py  prep_get_top_students.py  prep_multihop.py  prep_search_rag.py  prep_search_rag_1.py  prep_search_rag_2.py  prep_search_rag_3.py  prep_search_rag_4.py  prep_search_rag_5.py  test_agent_basic.py  test_classify_intent.py  test_e2e_classify_intent.py  test_e2e_router.py  test_router.py  test_tool_database.py  test_tools_basic.py
test_haiku/: test_utils_openai.py
test_haiku/s01_api_discover/: test_e01_profanity.py
test_haiku/s02_simple_haiku/: test_agent_integration_old.py  test_classify_intent.py  test_execute_gen_haiku.py  test_execute_rag_search.py  test_select_tool_call.py  test_validate_tool_call.py
test_haiku/s02_simple_haiku/haiku/: test_count_stats.py  test_haiku_service.py
test_learn/: help_e2e_router.py  test_agent_basic.py  test_e2e_router.py  test_router.py  test_tool_database.py
