[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "test-innercamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "faiss-cpu>=1,<1.9",
    "numpy>= 1.22.4,<2",
    "pandas>=2",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-dotenv<1.0.0",
    "python-dotenv<1.0.0",
    "pytest-xdist>=3.8.0",
]

[dependency-groups]
dev = [
    "loguru>=0.7.3",
    "mypy>=1.19.1",
    "ruff>=0.14.14",
    "tqdm>=4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
env_files = ".env"
filterwarnings = [
    "ignore:builtin type .{,15} has no __module__ attribute:DeprecationWarning",
]
markers = [
    "agent: end-to-end tests through real agent flow",
    "api: tests for api 1-4 functions",
    "llm: test llm api (chat_completions, embeddings)",
    "unit: test single components (fast)",

    # "integration: test multiple components interaction",
    # "rag: test rag related functions",
    # "haiku: test haiku related functions",
    # "step1: step1 stage tests",
    # "step2: step2 stage tests",
    # "step3: step3 stage tests",
    # "step4: step4 stage tests",
    # "happy: end-to-end happy path tests",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "single"
